# retailspiders

./: .gitignore  LICENSE  README.md  ninewest_failed2.json  reviews.json  run.py  sample.json  script.py  setup.cfg  test.py  utils.py
dba/: ninewestmodel.py
items/: debugging.py  models.py  proxy.py  tasks.py  utils.py
spiders/: Glossier.py  GlossierUpdate.py  anthropologie.py  asos.py  clinique.py  etsy.py  fragrancenet.py  global.py  glossier.py  glossierpostgre.py  maccosmetics.py  ninewest.py  rei.py  sephora.py  target.py  ulta.py  urbanoutfitter.py  urbanoutfitters.py  utils.py  verishop.py  walmart.py
