[metadata]
name = retail_scraper
version = 1.1
author = Hamid Nahli
author_email = hamidnahlirss@gmail.com
description = Ecommerce scrapers library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamidnahli/rs-app
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True